@@ -9,8 +9,11 @@ import uz.sfera.edu_platform.payload.req.ReqPassTest;
 import uz.sfera.edu_platform.payload.req.ReqQuiz;
 import uz.sfera.edu_platform.repository.*;
 
+import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
@@ -27,71 +30,50 @@ public class QuizService {
     private final QuizSessionRepository quizSessionRepository;
 
     public ApiResponse createQuiz(ReqQuiz reqQuiz) {
-        Lesson lesson = lessonRepository.findById(reqQuiz.getLessonId()).orElse(null);
-        if (lesson == null) {
-            return new ApiResponse(ResponseError.NOTFOUND("Lesson"));
-        }
+        return lessonRepository.findById(reqQuiz.getLessonId())
+                .map(lesson -> {
+                    if (lesson.getModule().getCategory() == null) {
+                        return new ApiResponse(ResponseError.DEFAULT_ERROR("Bu lessonning categoriyasi o‘chirilgan"));
+                    }
 
-        if (lesson.getModule().getCategory() == null){
-            return new ApiResponse(ResponseError.DEFAULT_ERROR("Bu lessonning categoriyasi uchirilgan"));
-        }
+                    Quiz quiz = quizRepository.save(Quiz.builder()
+                            .title(reqQuiz.getTitle())
+                            .lesson(lesson)
+                            .deleted(false)
+                            .build());
 
-        Quiz quiz = Quiz.builder()
-                .title(reqQuiz.getTitle())
-                .lesson(lesson)
-                .deleted(false)
-                .build();
-        quizRepository.save(quiz);
+                    QuizSettings quizSettings = QuizSettings.builder()
+                            .quiz(quiz)
+                            .questionCount(reqQuiz.getQuestionCount())
+                            .duration(reqQuiz.getDuration())
+                            .build();
 
-        QuizSettings settings = new QuizSettings();
-        settings.setQuiz(quiz);
-        settings.setQuestionCount(reqQuiz.getQuestionCount());
-        settings.setDuration(reqQuiz.getDuration());
-        quizSettingsRepository.save(settings);
+                    quizSettingsRepository.save(quizSettings);
 
-        return new ApiResponse("Quiz yaratildi");
-    }
-
-    public ApiResponse startTest(User user, Long quizId){
-        Quiz quiz = quizRepository.findById(quizId).orElse(null);
-        if (quiz == null){
-            return new ApiResponse(ResponseError.NOTFOUND("Quiz"));
-        }
-        QuizSession quizSession = QuizSession.builder()
-                .user(user)
-                .quiz(quiz)
-                .active(true)
-                .startTime(LocalDateTime.now())
-                .endTime(null)
-                .build();
-        quizSessionRepository.save(quizSession);
-        return new ApiResponse(getRandomQuestionsForQuiz(quizId));
-    }
-
-    public List<QuestionDTO> getRandomQuestionsForQuiz(Long quizId) {
-        QuizSettings settings = quizSettingsRepository.findByQuizId(quizId);
-        List<Question> allQuestions = questionRepository.findRandomQuestionsByQuizId(quizId);
-
-        return allQuestions.stream()
-                .limit(settings.getQuestionCount())
-                .map(question -> {
-                    List<OptionDTO> optionDTOList = optionRepository.findByQuestionId(question.getId()).stream()
-                            .map(optionService::optionDTO)
-                            .toList();
-                    return questionService.questionDTO(question, optionDTOList);
+                    return new ApiResponse("Quiz yaratildi");
                 })
-                .toList();
+                .orElseGet(() -> new ApiResponse(ResponseError.NOTFOUND("Lesson")));
     }
 
-    public ApiResponse getQuiz(Long quizId) {
+
+    public ApiResponse startTest(User user, Long quizId) {
         Quiz quiz = quizRepository.findById(quizId).orElse(null);
         if (quiz == null) {
             return new ApiResponse(ResponseError.NOTFOUND("Quiz"));
         }
-        if (quiz.getLesson().getModule().getCategory() == null){
-            return new ApiResponse(ResponseError.DEFAULT_ERROR("Bu quizning categoriyasi uchirilgan"));
+
+        QuizSession quizSession = quizSessionRepository.findByUserAndQuizAndActiveTrue(user, quiz);
+        if (quizSession == null) {
+            quizSession = QuizSession.builder()
+                    .user(user)
+                    .quiz(quiz)
+                    .active(true)
+                    .startTime(LocalDateTime.now())
+                    .build();
+            quizSessionRepository.save(quizSession);
         }
-        return new ApiResponse(quizDTO(quiz));
+
+        return new ApiResponse(getRandomQuestionsForQuiz(quizId));
     }
 
     public ApiResponse passTest(List<ReqPassTest> passTestList, User user, Long quizId) {
@@ -109,8 +91,7 @@ public class QuizService {
         quizSession.setActive(false);
         quizSessionRepository.save(quizSession);
 
-        long timeTaken = java.time.Duration.between(quizSession.getStartTime(), quizSession.getEndTime()).getSeconds();
-
+        long timeTaken = Duration.between(quizSession.getStartTime(), quizSession.getEndTime()).getSeconds();
         QuizSettings settings = quizSettingsRepository.findByQuizId(quizId);
         if (settings == null) {
             return new ApiResponse(ResponseError.NOTFOUND("Quiz settings"));
@@ -120,18 +101,20 @@ public class QuizService {
             return new ApiResponse(ResponseError.DEFAULT_ERROR("Testni belgilangan vaqtdan ko'proq bajardingiz!"));
         }
 
-        List<Long> questionIds = passTestList.stream()
-                .map(ReqPassTest::getQuestionId)
-                .collect(Collectors.toList());
-
-        List<Option> correctAnswers = optionRepository.findCorrectAnswersByQuestionIds(questionIds);
+        Set<Long> questionIds = passTestList.stream().map(ReqPassTest::getQuestionId).collect(Collectors.toSet());
+        Map<Long, Long> correctAnswersMap = optionRepository.findCorrectAnswersByQuestionIds(questionIds).stream()
+                .collect(Collectors.toMap(
+                        option -> option.getQuestion().getId(),
+                        Option::getId,
+                        (existing, replacement) -> existing
+                ));
 
         long correctCount = passTestList.stream()
-                .filter(reqPassTest -> correctAnswers.stream()
-                        .anyMatch(answer -> answer.getId().equals(reqPassTest.getOptionId())))
+                .filter(reqPassTest -> correctAnswersMap.getOrDefault(reqPassTest.getQuestionId(), -1L)
+                        .equals(reqPassTest.getOptionId()))
                 .count();
 
-        Result result = Result.builder()
+        resultRepository.save(Result.builder()
                 .quiz(quiz)
                 .user(user)
                 .totalQuestion(passTestList.size())
@@ -140,27 +123,55 @@ public class QuizService {
                 .startTime(quizSession.getStartTime())
                 .endTime(quizSession.getEndTime())
                 .createdAt(LocalDateTime.now())
-                .build();
+                .build());
 
-        resultRepository.save(result);
         return new ApiResponse("Test muvaffaqiyatli o'tkazildi!");
     }
 
+    public List<QuestionDTO> getRandomQuestionsForQuiz(Long quizId) {
+        QuizSettings settings = quizSettingsRepository.findByQuizId(quizId);
+        return questionRepository.findRandomQuestionsByQuizId(quizId).stream()
+                .limit(settings.getQuestionCount())
+                .map(question -> questionService.questionDTO(question,
+                        optionRepository.findByQuestionId(question.getId()).stream()
+                                .map(optionService::optionDTO)
+                                .toList()))
+                .toList();
+    }
+
+    public ApiResponse getQuiz(Long quizId) {
+        return quizRepository.findById(quizId)
+                .map(quiz -> {
+                    QuizSettings settings = quizSettingsRepository.findByQuizId(quizId);
+                    List<QuestionDTO> questions = questionRepository.findByQuizId(quizId).stream()
+                            .map(q -> questionService.questionDTO(q, optionRepository.findByQuestionId(q.getId())
+                                    .stream().map(optionService::optionDTO).toList()))
+                            .toList();
+
+                    return new ApiResponse(new QuizDTO(
+                            quiz.getId(),
+                            quiz.getTitle(),
+                            quiz.getLesson().getId(),
+                            settings != null ? settings.getQuestionCount() : 0,
+                            settings != null ? settings.getDuration() : 0
+                    ));
+                })
+                .orElseGet(() -> new ApiResponse(ResponseError.NOTFOUND("Quiz")));
+    }
 
     public ApiResponse getQuizByLesson(Long lessonId) {
-        Lesson lesson = lessonRepository.findById(lessonId).orElse(null);
-        if (lesson == null) {
-            return new ApiResponse(ResponseError.NOTFOUND("Lesson"));
-        }
-        List<Quiz> quizList = quizRepository.findByLessonId(lessonId);
-        if (quizList.isEmpty()) {
-            return new ApiResponse(ResponseError.NOTFOUND("Lesson bo'yicha quizlar"));
-        }
-        List<QuizDTO> quizDTOS = quizList.stream()
-                .filter(quiz -> quiz.getLesson().getModule().getCategory() != null)
-                .map(this::quizDTO)
-                .collect(Collectors.toList());
-        return new ApiResponse(quizDTOS);
+        return lessonRepository.findById(lessonId)
+                .map(lesson -> {
+                    List<QuizDTO> quizDTOS = quizRepository.findByLessonId(lessonId).stream()
+                            .filter(quiz -> quiz.getLesson().getModule().getCategory() != null)
+                            .map(this::quizDTO)
+                            .toList();
+
+                    return quizDTOS.isEmpty()
+                            ? new ApiResponse(ResponseError.NOTFOUND("Lesson bo'yicha quizlar"))
+                            : new ApiResponse(quizDTOS);
+                })
+                .orElseGet(() -> new ApiResponse(ResponseError.NOTFOUND("Lesson")));
     }
 
     public ApiResponse deleteQuiz(Long quizId) {
